Fix z-index issue with CodeMirror and Merge Tags
https://i.gravitykit.com/v/mWdWmb

--- a/assets/css/scss/admin-views.scss
+++ b/assets/css/scss/admin-views.scss
@@ -559,6 +559,10 @@ $gv-overlay-index: 10000;
 	max-width: 690px!important;
 }
 
+.gform-admin .gform-dropdown--merge-tags .gform-dropdown__container {
+	z-index: $gv-overlay-index + 2;
+}
+
 /** View configuration tabs */
 .post-type-gravityview .ui-tabs {
 	position: relative;
